[tool.poetry]
name = "product search api"
version = "0.1.0"
description = "This is an API for searching through products"
authors = ["Fortune"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
products = "^1.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
