[tool.poetry]
name = "fastapi-projeect"
version = "0.1.0"
description = ""
authors = ["Fortune"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pytest = "^8.1.1"
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
