[tool.poetry]
name = "fastapi-projeect"
version = "0.1.0"
description = ""
authors = ["Fortune"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
phonenumbers = "^8.13.33"
fastapi = "^0.110.1"
pydantic-extra-types = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
